K8S/DeployHelloWorld/2.1-DeployServiceCLS.yaml
# เรียกจาก ClusterIP เท่านั้น
apiVersion: v1
kind: Service
metadata:
  name: service-deploy-hello-kubernetes
  #namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-kubernetes
  type: ClusterIP
