K8S/DeployHelloWorld/2.2-DeployServiceLB.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-deploy-hello-kubernetes
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes
