K8S/DeployHelloWorld/2.3-DeployServiceNP.yaml
# เรียกจาก Node IP ตามด้วย Port เท่านั้น
apiVersion: v1
kind: Service
metadata:
  name: service-deploy-hello-kubernetes
  #namespace: default
spec:
  ports:
  - nodePort: 32590
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-kubernetes
  #sessionAffinity: None
  type: NodePort
