K8S/DeployHelloWorld/3-DeployIngressRule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-service-deploy-hello-kubernetes
  #namespace: default
spec:
  rules:
    - host: kn.local
      http:
        paths:
          - backend:
              serviceName: hello-kubernetes
              servicePort: 8088
            path: /
